# forge-sdd-toolkit

./: .gitignore  INSTALL.md  INTEGRATION-OPTIONS.md  LICENSE  MANIFEST.in  README.md  TROUBLESHOOTING.md  forge-sdd-cli.py  forge_sdd_cli.py  pyproject.toml
.github/: copilot-instructions.md
ai-agents/: README.md
docs/: INSTALL-TEST.md  INSTALL.md
prompts/: forge-ideate.prompt.md  forge-implement.prompt.md  forge-plan.prompt.md  forge-test.prompt.md
scripts/bash/: create-forge-app.sh  create-implementation-plan.sh  create-new-feature.sh
templates/: forge-rules.md  ideate-template.md  manifest-structures.md  plan-template.md
