[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-sdd-toolkit"
version = "1.0.3"
description = "Toolkit para desenvolvimento orientado por especificações em Atlassian Forge"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "4-youtest", email = "contato@4-you.com.br" }
]
keywords = [
    "atlassian",
    "forge",
    "specification-driven-development",
    "sdd",
    "toolkit",
    "jira",
    "confluence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/4-youtest/forge-sdd-toolkit"
Repository = "https://github.com/4-youtest/forge-sdd-toolkit"
Issues = "https://github.com/4-youtest/forge-sdd-toolkit/issues"

[project.scripts]
forge-sdd = "forge_sdd_cli:main"

[tool.setuptools]
py-modules = ["forge_sdd_cli"]
include-package-data = true

[tool.setuptools.data-files]
"forge_sdd_toolkit_data/.github" = [".github/copilot-instructions.md"]
"forge_sdd_toolkit_data/.github/prompts" = ["prompts/*.prompt.md"]
"forge_sdd_toolkit_data/scripts/bash" = ["scripts/bash/*"]
"forge_sdd_toolkit_data/templates" = ["templates/*.md"]
